[package]
name = "rabbot-plugin"
version = "0.1.0"
description = "Compiler plugin for Rabbot"
repository = "https://github.com/willcrichton/rabbot"
readme = "../README.md"
keywords = ["abstract", "binding", "tree"]
license = "Apache-2.0/MIT"
authors = ["Will Crichton <wcrichto@stanford.edu>"]

[lib]
plugin = true
crate-type = ["dylib"]

[dependencies]
rabbot = { path = "../rabbot", version = "0.1" }
