[package]
name = "rabbot"
version = "0.1.0"
description = "Abstract binding tree generator"
repository = "https://github.com/willcrichton/rabbot"
readme = "../README.md"
keywords = ["abstract", "binding", "tree"]
license = "Apache-2.0/MIT"
authors = ["Will Crichton <wcrichto@stanford.edu>"]
build = "build.rs"

[dependencies]
lalrpop-util = "0.12.0"

[build-dependencies]
lalrpop = "0.12.0"
